--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
+<title>Victor Isaac - Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra</title>
 <meta charset="UTF-8">
-<meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
-<meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
+<meta name="title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra">
+<meta name="description" content="Looking for a top-tier Python Backend Engineer with expertise in Django and Django Rest Framework? You've found the right person! Hello, my name is Victor Isaac. With years of experience, I've had the privilege of working on exceptional projects for brilliant clients like yourself, sometimes as part of a team 🤝and sometimes as a one-man army 🪖. My colleagues often call me the '10-man engineer' because I consistently meet deadlines and tackle complex tasks with optimized and clean code. I can tell you're looking for a reliable and skilled backend engineer who delivers top-notch results, let's start a conversation immediately and get to work on your project. I’m super excited to help solve your complex problems!"/>
   <meta name="keywords" content="victor isaac, victor, isaac, victor isaac backend, upwork, freelancer, Django developer, python, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="Contact" />
@@ -12,24 +12,24 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
 <meta property="og:url" content="https://victherem.github.io" />
-<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | I can design and build any backend infra" />
+<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta property="og:title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.png" />
+<meta property="og:image" content="https://victhereum.github.io/images/victor-isaac-logo.png" />
 
-<meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta property="og:description" content="Looking for a top-tier Python Backend Engineer with expertise in Django and Django Rest Framework? You've found the right person! Hello, my name is Victor Isaac. With years of experience, I've had the privilege of working on exceptional projects for brilliant clients like yourself, sometimes as part of a team 🤝and sometimes as a one-man army 🪖. My colleagues often call me the '10-man engineer' because I consistently meet deadlines and tackle complex tasks with optimized and clean code. I can tell you're looking for a reliable and skilled backend engineer who delivers top-notch results, let's start a conversation immediately and get to work on your project. I’m super excited to help solve your complex problems!"/>
 <meta name="twitter:card" content="summary_large_image">
 
 <meta name="twitter:site" content="@__victhereum__">
 
 <meta name="twitter:creator" content="@__victhereum__">
 
-<meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta name="twitter:title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta name="twitter:description" content="Looking for a top-tier Python Backend Engineer with expertise in Django and Django Rest Framework? You've found the right person! Hello, my name is Victor Isaac. With years of experience, I've had the privilege of working on exceptional projects for brilliant clients like yourself, sometimes as part of a team 🤝and sometimes as a one-man army 🪖. My colleagues often call me the '10-man engineer' because I consistently meet deadlines and tackle complex tasks with optimized and clean code. I can tell you're looking for a reliable and skilled backend engineer who delivers top-notch results, let's start a conversation immediately and get to work on your project. I’m super excited to help solve your complex problems!"/>
 
-<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.png" />
+<meta name="twitter:image" content="https://victhereum.github.io/images/victor-isaac-logo.png" />
     <link rel="canonical" href="https://victhereum.github.io/contact.html" />
     <!-- Favicon -->
     <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
