--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
+<title>Victor Isaac - Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra</title>
 <meta charset="UTF-8">
-<meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
-<meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!">
+<meta name="title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra">
+<meta name="description" content="Looking for a top-tier Python Backend Engineer with expertise in Django and Django Rest Framework? You've found the right person! Hello, my name is Victor Isaac. With years of experience, I've had the privilege of working on exceptional projects for brilliant clients like yourself, sometimes as part of a team 🤝and sometimes as a one-man army 🪖. My colleagues often call me the '10-man engineer' because I consistently meet deadlines and tackle complex tasks with optimized and clean code. I can tell you're looking for a reliable and skilled backend engineer who delivers top-notch results, let's start a conversation immediately and get to work on your project. I’m super excited to help solve your complex problems!"/>
   <meta name="keywords" content="victor isaac, victor, isaac, victor isaac backend, upwork, freelancer, Django developer, python, Fullstack developer, Backend developer, Django Rest Framework, Python developer, JavaScript developer, SQL database management, PostgreSQL developer, MySQL developer, RESTful APIs, scalable web development, maintainable code, efficient code, media microservice development, AI language learning software, e-commerce development, Monero cryptocurrency, escrow feature, conflict resolution, user-friendly interface, secure transactions, hardware products command center, device communication, remote monitoring, crypto command center, centralized exchange tracking, Binance, Kucoin, Coinbase">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="Portfolio" />
@@ -12,24 +12,24 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
 <meta property="og:url" content="https://victherem.github.io" />
-<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | I can design and build any backend infra" />
+<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta property="og:title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.png" />
+<meta property="og:image" content="https://victhereum.github.io/images/victor-isaac-logo.png" />
 
-<meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta property="og:description" content="Looking for a top-tier Python Backend Engineer with expertise in Django and Django Rest Framework? You've found the right person! Hello, my name is Victor Isaac. With years of experience, I've had the privilege of working on exceptional projects for brilliant clients like yourself, sometimes as part of a team 🤝and sometimes as a one-man army 🪖. My colleagues often call me the '10-man engineer' because I consistently meet deadlines and tackle complex tasks with optimized and clean code. I can tell you're looking for a reliable and skilled backend engineer who delivers top-notch results, let's start a conversation immediately and get to work on your project. I’m super excited to help solve your complex problems!"/>
 <meta name="twitter:card" content="summary_large_image">
 
 <meta name="twitter:site" content="@__victhereum__">
 
 <meta name="twitter:creator" content="@__victhereum__">
 
-<meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta name="twitter:title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
+<meta name="twitter:description" content="Looking for a top-tier Python Backend Engineer with expertise in Django and Django Rest Framework? You've found the right person! Hello, my name is Victor Isaac. With years of experience, I've had the privilege of working on exceptional projects for brilliant clients like yourself, sometimes as part of a team 🤝and sometimes as a one-man army 🪖. My colleagues often call me the '10-man engineer' because I consistently meet deadlines and tackle complex tasks with optimized and clean code. I can tell you're looking for a reliable and skilled backend engineer who delivers top-notch results, let's start a conversation immediately and get to work on your project. I’m super excited to help solve your complex problems!"/>
 
-<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.png" />
+<meta name="twitter:image" content="https://victhereum.github.io/images/victor-isaac-logo.png" />
 <link rel="canonical" href="https://victhereum.github.io/index.html" />
 
 <!-- Favicon -->   
@@ -131,10 +131,56 @@
         </div>
         <div class="spacer-30"></div>
         <p class="clip-animation" data-delay="1.1">
-          As an accomplished Django Backend and Fullstack developer with 7 years of experience, I specialize in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success.
+          Looking for a top-tier Python Backend Engineer with expertise in Django and Django Rest Framework? You've found the right person!
         </p>
         <div class="spacer-15"></div>
-        <p class="clip-animation" data-delay="1.2">I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!</p>
+        <p class="clip-animation" data-delay="1.2">
+          Hello, my name is Victor Isaac. With years of experience, I've had the privilege of working on exceptional projects for brilliant clients like yourself, sometimes as part of a team 🤝and sometimes as a one-man army 🪖. My colleagues often call me the "10-man engineer" because I consistently meet deadlines and tackle complex tasks with optimized and clean code.
+        </p>
+        <!-- download cv-->
+        <div class="spacer-15"></div>
+        <div class="contact-info email">
+          <p class="clip-animation" data-delay="1.2">
+            Why choose me? Here’s what I bring to the table:
+          </p>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Mastery of Django and Python, making me a go-to expert in these areas</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Proficiency in Docker and containerization.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Strong understanding of system design principles, microservices, caching, database optimization, and CI/CD.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  A continuous learner, always expanding my skill set to stay ahead of industry trends.</a></span>
+          <br>
+        </div>   
+        <div class="spacer-15"></div>
+        <div class="contact-info email">
+          <p class="clip-animation" data-delay="1.2"></p>
+            My Mantra:
+          </p>          
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  I don't do average.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  I deliver on time.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  You need a solution, while I provide the solution.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Your project success is directly proportional to my success and I take that seriously.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Your idea/project needs the right hands to manifest it, and I am just the right guy for the job.</a></span>
+          <br>
+        </div>
+        <div class="contact-info email">
+          <p class="clip-animation" data-delay="1.2">
+            Some of my key projects include:
+          </p>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Conceptualizing and building a media microservice for an AI language learning software company, significantly boosting user engagement and retention rates.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Developing an E-commerce website with Monero cryptocurrency payments, including an escrow feature and conflict resolution, ensuring secure and seamless transactions for both buyers and sellers.</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Created the backend service for a Smart Automated Metering Infrastructure, facilitating seamless communication between the meters and the server via MQTT and enabling users to control and monitor their meters remotely. (THIS IS NOVEL actually).</a></span>
+          <br>
+          <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Building a crypto portfolio manager that consolidates users' cryptocurrencies from various centralized exchanges, such as Binance, Kucoin, and Coinbase, into a single platform for easy tracking and management.</a></span>
+          <br>
+        </div>
         <!-- download cv-->
          <div class="spacer-45"></div>
        <div class="col-xl-12 text-center">
