--- a/work-1.html
+++ b/work-1.html
@@ -9,7 +9,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 <meta name="twitter:creator" content="@__victhereum__">
 
-<meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta name="twitter:title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
 <meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
@@ -34,7 +34,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 
-<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.png" />
+<meta name="twitter:image" content="https://victhereum.github.io/images/victor-isaac-logo.png" />
     <link rel="canonical" href="https://victhereum.github.io/work-1.html" />
     <!-- Favicon -->
     <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
