--- a/single-blog.html
+++ b/single-blog.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Victor Isaac - Python Backend Engineer | I can design and build any backend infra</title>
+<title>Victor Isaac - Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra</title>
 <meta charset="UTF-8">
-<meta name="title" content="Python Backend Engineer | I can design and build any backend infra">
+<meta name="title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra">
 <meta name="description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
 - Technical Proficiency:
@@ -33,11 +33,11 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
 <meta property="og:url" content="https://victherem.github.io" />
-<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | I can design and build any backend infra" />
+<meta property="og:author-info" content="Victor Isaac - Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta property="og:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta property="og:title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
-<meta property="og:image" content="https://victhereum.github.io/images/profile-loader.png" />
+<meta property="og:image" content="https://victhereum.github.io/images/victor-isaac-logo.png" />
 
 <meta property="og:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
@@ -67,7 +67,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 <meta name="twitter:creator" content="@__victhereum__">
 
-<meta name="twitter:title" content="Python Backend Engineer | I can design and build any backend infra" />
+<meta name="twitter:title" content="Python Backend Engineer | Celery | Django | DRF | Website & API Development | API Integration | I can design and build any backend infra" />
 
 <meta name="twitter:description" content="As an accomplished Python/Django Backend Engineer with 7 years of experience, Victor Isaac specializes in creating robust, scalable solutions using Django. My passion lies in crafting efficient, maintainable code that drives business success. Here are some key highlights:
 
@@ -92,7 +92,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
 
 I'm committed to staying up-to-date with the latest technologies and delivering exceptional results. With excellent communication skills and a customer-focused mindset, I'm ready to contribute to your projects on Upwork. Let's drive business growth together!" />
 
-<meta name="twitter:image" content="https://victhereum.github.io/images/profile-loader.png" />
+<meta name="twitter:image" content="https://victhereum.github.io/images/victor-isaac-logo.png" />
     <link rel="canonical" href="https://victhereum.github.io/resume.html" />
 
     <!-- Favicon -->
