--- a/index.html
+++ b/index.html
@@ -150,11 +150,8 @@
           <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Strong understanding of system design principles, microservices, caching, database optimization, and CI/CD.</a></span>
           <br>
           <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  A continuous learner, always expanding my skill set to stay ahead of industry trends.</a></span>
-          <br>
-        </div>   
         <div class="spacer-15"></div>
-        <div class="contact-info email">
-          <p class="clip-animation" data-delay="1.2"></p>
+          <p class="clip-animation" data-delay="1.2">
             My Mantra:
           </p>          
           <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  I don't do average.</a></span>
@@ -166,9 +163,7 @@
           <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Your project success is directly proportional to my success and I take that seriously.</a></span>
           <br>
           <span><i class="fa-solid fa-asterisk fa-shake" style="color: #e6ff00;"></i><a class="little-p info-title">  Your idea/project needs the right hands to manifest it, and I am just the right guy for the job.</a></span>
-          <br>
-        </div>
-        <div class="contact-info email">
+          <div class="spacer-15"></div>
           <p class="clip-animation" data-delay="1.2">
             Some of my key projects include:
           </p>
