--- a/resume.html
+++ b/resume.html
@@ -106,7 +106,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 timeline-item clip-animation from-top"
                   data-duration="1.5">
                   <div class="timeline-outer">
-                    <a href="https://www.amihub.africa/" target="_blank"><img style="width: 50px; height:50px"  src="https://media.licdn.com/dms/image/D4D0BAQGL5pDdknfqdg/company-logo_200_200/0/1690717596978?e=1726704000&v=beta&t=SznLK9vDf1hifI_DaJQybZaz-73klLVv1vULBlOStf8" alt="Africa Manufacturing Innovation Hub" /></a><br>
+                    <a href="https://www.amihub.africa/" target="_blank"><img style="width: 50px; height:50px"  src="https://media.licdn.com/dms/image/v2/D4D0BAQGL5pDdknfqdg/company-logo_100_100/company-logo_100_100/0/1690717596978?e=1750291200&v=beta&t=kNjfs85bz6QpMhaoHFMWCaEKU_yXpY-QWV1kAt5l1kg" alt="Africa Manufacturing Innovation Hub" /></a><br>
                     <span class="mini-text">Nov 2022 - Present</span>
                     <h5>Senior Software Engineer | Africa Manufacturing Innovation Hub</h5>
                     <p class="little-p">As a Senior Backend Engineer at the Africa Manufacturing Innovation Hub, I am at
@@ -130,7 +130,7 @@
                   class="col-xl-6 offset-xl-6 col-lg-6 offset-lg-6 col-md-6 offset-md-6 col-sm-12 timeline-item  clip-animation from-top"
                   data-duration="1.5"=".4">
                   <div class="timeline-outer">
-                    <a href="https://www.learngual.com/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/C560BAQEtcdIuhpcKuw/company-logo_200_200/0/1677699817138/learngual_logo?e=1726704000&v=beta&t=FY2FdFRh9itVJyw_wFY084bOc8FGQtSb7egkG8ebij4" alt="Learngual Inc" /></a><br>
+                    <a href="https://www.learngual.com/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/v2/C560BAQEtcdIuhpcKuw/company-logo_100_100/company-logo_100_100/0/1677699817138/learngual_logo?e=1750291200&v=beta&t=qRY6Ag2yqiQ3uhilZ6iw1zW9fzj8tJlzI2hHF4Zye3c" alt="Learngual Inc" /></a><br>
                     <span class="mini-text">Jan 2023 - May 2024</span>
                     <h5>Software Engineer | Learngual Inc</h5>
                     <p class="little-p">
@@ -154,7 +154,7 @@
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 timeline-item clip-animation from-top"
                   data-duration="1.5"=".8">
                   <div class="timeline-outer">
-                    <a href="https://www.ecclesit.co.uk/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/C4E0BAQHcWNexUUxoVQ/company-logo_200_200/0/1630640176247/eccles_it_ltd_logo?e=1726704000&v=beta&t=OFR21tOOfOUl1Q8hd18DHsg1tWE5vj5Qu8S_T3a6a20" alt="Eccles IT LTD" /></a><br>
+                    <a href="https://www.ecclesit.co.uk/" target="_blank"><img style="width: 50px; height:50px" src="https://media.licdn.com/dms/image/v2/C4E0BAQHcWNexUUxoVQ/company-logo_100_100/company-logo_100_100/0/1630640176247/eccles_it_ltd_logo?e=1750291200&v=beta&t=RqvFrfamYjRuk2KHmLZg89QqUDu446YYt5PY9jpHgKo" alt="Eccles IT LTD" /></a><br>
                     <span class="mini-text">Nov 2021 - Mar 2023</span>
                     <h5>Software Engineer | Eccles IT LTD</h5>
                     <p class="little-p">
@@ -222,7 +222,7 @@
                     <div class="col-xl-11 col-lg-11 col-md-11 col-sm-11 col-11">
                       <div class="row">
                         <div class="pie-chart col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 classic-animation"=".5">
-                          <div class="chart" data-percent="92" data-scale-color="#e6ff00">
+                          <div class="chart" data-percent="99" data-scale-color="#e6ff00">
                             <span class="percent">99</span>
                           </div>
                           <div class="skills-description">
@@ -249,12 +249,12 @@
                           </div>
                         </div>
                         <div class="pie-chart col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 classic-animation"=".7">
-                          <div class="chart" data-percent="60" data-scale-color="#e6ff00">
-                            <span class="percent">60</span>
+                          <div class="chart" data-percent="70" data-scale-color="#e6ff00">
+                            <span class="percent">70</span>
                           </div>
                           <div class="skills-description">
                             <i style="color: #e6ff00;" class="fa-brands fa-js-square"></i>
-                            <h6>JavaScript</h6>
+                            <h6>TypeScript</h6>
                           </div>
                         </div>
                       </div>
@@ -293,12 +293,12 @@
                         </li>
                         <li>
                           <div class="bar-info">
-                            <h3>Bootstrap</h3>
-                            <i class="fab fa-bootstrap" style="color: #e6ff00;"></i>
-                            <span>70%</span>
+                            <h3>React</h3>
+                            <i class="fab fa-react" style="color: #e6ff00;"></i>
+                            <span>80%</span>
                           </div>
                           <div class="progress">
-                            <div class="percentage" data-percent="34%"></div>
+                            <div class="percentage" data-percent="80%"></div>
                           </div>
                         </li>
                       </ul>
@@ -353,7 +353,7 @@
               <div class="container">
                 <div class="footer-inner">
                   <div class="copyright">
-                    <p>Copyright 2024 - All right reserved</p>
+                    <p>Copyright 2025 - All right reserved</p>
                   </div>
                   <ul class="social">
                     <li><a href="https://www.upwork.com/freelancers/~015570d3b0e46af127?mp_source=share" target="_blank"><i class="fab fa-upwork"></i></a></li>
