--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
   <div id="loader" class="preloader">
     <div class="loading">
       <div class="profile-image">
-        <img src="images/profile-loader.png" alt="">
+        <img src="images/victor-isaac-logo.png" alt="">
         <svg style="position: absolute;" width="100px" height="100px" viewBox="0 0 100 100" preserveAspectRatio="none">
           <circle class="js-circle circle" cx="50" cy="50" r="48" stroke="white" stroke-width="2" fill="none" />
           <circle class="js-circle circletwo" cx="50" cy="50" r="48" stroke="white" stroke-width="2" fill="none" />
