--- a/work-2.html
+++ b/work-2.html
@@ -73,7 +73,7 @@ of experience using various programming languages and web frameworks to
     <div id="loader" class="preloader">
       <div class="loading">
         <div class="profile-image">
-          <img src="images/profile-loader.png" alt="" />
+          <img src="images/victor-isaac-logo.png" alt="" />
           <svg
             style="position: absolute"
             width="100px"
