--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     <div id="loader" class="preloader">
       <div class="loading">
         <div class="profile-image">
-          <img src="images/profile-loader.png" alt="" />
+          <img src="images/victor-isaac-logo.png" alt="" />
           <svg
             style="position: absolute"
             width="100px"
