--- a/single-blog.html
+++ b/single-blog.html
@@ -123,7 +123,7 @@ I'm committed to staying up-to-date with the latest technologies and delivering 
     <div id="loader" class="preloader">
       <div class="loading">
         <div class="profile-image">
-          <img src="images/profile-loader.png" alt="" />
+          <img src="images/victor-isaac-logo.png" alt="" />
           <svg
             style="position: absolute"
             width="100px"
